fixed the issue with the jumping header

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -13,7 +13,10 @@ body {
 
 #nav-wrapper{
  background-color: $background-color;
- padding: 30px
+ padding-left: 20px;
+ width: 100%;
+ background:rgba(255,255,255,0.5);
+ border-bottom: 1px solid #eee !important;;
 }
 
 .nav {
@@ -21,6 +24,14 @@ body {
   position: relative;
 }
 
+.header{
+  margin-bottom: 30px;
+  
+}
+#make-fixed{
+  top: 0;
+  left: 0;
+}
 .connect{
   text-align: center;
   color: $grey-text - 40;
@@ -44,4 +55,8 @@ body {
   background-position: 0px -220px;
   height: 120px;
   width: 100%;
+}
+.navbar-overlay {
+  float: left;
+  margin-top: -123px;
 }
